# stack-app

./: Dockerfile  README.md  spock-app.cabal
