name:                spock-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/t10471/spock-app
license:             BSD3
license-file:        LICENSE
author:              t10471 
maintainer:          t104711202@gmail.com
copyright:           2017 t10471
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable spock-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spock-app
                     , Spock
                     , mtl
                     , text

  default-language:    Haskell2010

test-suite spock-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spock-app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/t10471/spock-app
